# robot-test-demo

./: .gitignore  env.py  log.html  output.xml  pyproject.toml  report.html
data/: records.xlsx
data/demo/: math.xlsx
data/demo/mobile/ios.app/: Info.plist  Runner
data/demo/mobile/ios.app/Frameworks/App.framework/: App
data/demo/mobile/ios.app/Frameworks/App.framework/_CodeSignature/: CodeResources
data/demo/mobile/ios.app/Frameworks/App.framework/flutter_assets/: AssetManifest.json  NOTICES.Z
data/demo/mobile/ios.app/_CodeSignature/: CodeResources
data/demo/sql/: clean_up.sql
data/sql/: clean_up.sql
data/web/: products.xlsx
resources/api/auth/: authentication.resource
resources/common/: variables.resource
resources/db/: common.resource
resources/mobile/: android.robot
tests/api/auth/: authentication.robot
tests/demo/: api.robot  database.robot
tests/demo/basic/: dict.robot  for.robot  if_else.robot  keyword.robot  list.robot  string.robot  test_suite.robot  variables.robot
tests/demo/data-driven/: excel.robot  template.robot
tests/demo/mobile/: elements.robot  form.robot
tests/demo/mobile/android/: switch_app.robot
tests/demo/mobile/ios/: elements.robot  form.robot
tests/demo/web/: dialog.robot  elements.robot  form.robot
tests/mobile/products/: list.robot
tests/web/products/: list.robot  search.robot
